scenarios/argo/fakenodes/k8s/istio/vcluster-k8s-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: vcluster-k8s
  namespace: istio-ingress
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: vcluster-k8s-123-cert
    hosts:
    - "vcluster-k8s.172.27.0.3.nip.io"
