scenarios/argo/fakenodes/k8s/istio/istio-vs-vcluster-k8s-123-4-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vcluster-k8s-123-4
  namespace: k8s
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingress/vcluster
  tls:
  - match:
    - port: 443
      sniHosts:
      - "vcluster-k8s-123-4"
    route:
    - destination:
        host: vcluster-k8s-123-4
        port:
          number: 443
